[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/leoStuff/HUD/map/map.gd" type="Script" id=1]
[ext_resource path="res://Scenes/leoStuff/HUD/map/text.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/pokemon map.PNG" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[node name="map" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="name of place" parent="." instance=ExtResource( 2 )]
visible = false

[node name="PokemonMap" type="Sprite" parent="."]
scale = Vector2( 1.60267, 1.35508 )
texture = ExtResource( 3 )
centered = false

[node name="Button" type="Button" parent="."]
margin_left = 940.0
margin_top = 356.0
margin_right = 1052.0
margin_bottom = 446.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )

[node name="Button2" type="Button" parent="."]
margin_left = 938.0
margin_top = 462.0
margin_right = 1056.0
margin_bottom = 569.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )

[connection signal="hide" from="Button" to="." method="_on_Button_hide"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="hide" from="Button2" to="." method="_on_Button2_hide"]
[connection signal="mouse_entered" from="Button2" to="." method="_on_Button2_mouse_entered"]
[connection signal="mouse_exited" from="Button2" to="." method="_on_Button2_mouse_exited"]
